--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,21 @@
         </p>
       </nz-upload>
     </div>
+
+    <div style="margin-top: 50px;">
+      <h6>Valid Format:</h6>
+      <p>
+        Quarter 1, 2019<br/>
+        Susan Smith H 75 88 94 95 84 68 91 74 100 82 93 T 73 82 81 92 85<br/>
+        John Wright H 86 55 96 78 T 82 89 93 70 74 H 93 85 80 74 76 82 62<br/>
+        Jane Jones T 88 94 100 82 95 H 84 66 74 98 92 85 100 95 96 42 88<br/>
+        Jimmy Doe H 73 99 98 83 85 92 100 60 74 98 92 T 84 96 79 91 95<br/>
+        Suzy Johnson H 65 72 78 80 82 74 76 0 85 75 76 T 74 79 70 83 78<br/>
+      </p>
+    </div>
   </div>
+
+
   <div class="ant-col-12 inner-container">
     <ng-container *ngIf="quarterStudentsGrades?.length === 0">
       <h2>No grades has been inputted yet.</h2>
