--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <h1>Edukasyon</h1>
 </div>
 
-<div class="container">
+<div class="container potpot">
   <div class="ant-col-12 inner-container">
     <div>
       <label>Please input your student grades Ms.Tiffany</label>
